# UltraSinger-with-webui

./: .gitignore  Dockerfile  README.md  install_webui.bat  install_webui.sh  install_webui_linux.sh  install_webui_macos.sh  pyproject.toml  start_ultrasinger_webui.bat  start_ultrasinger_webui.lnk  start_ultrasinger_webui_linux.sh  start_ultrasinger_webui_macos.command
.github/ISSUE_TEMPLATE/: ultrasinger-bug.md  ultrasinger-features.md  webui-bug.md  webui-feature.md
data/: export_folders.json  webui_config.json
install/CPU/: linux_cpu.sh  macos_cpu.sh  windows_cpu.bat
install/CUDA/: linux_cuda_gpu.sh  windows_cuda_gpu.bat
pytest/webui/: test_ai_lyrics_replace.py  test_export_skip_check.py  test_lyrics_remote.py  test_ultrasinger_tag.py  test_ultrastar_plain_lyrics.py  test_yarg_export.py  test_zip_naming.py
src/: Settings.py  UltraSinger.py
src/modules/: common_print.py  os_helper.py
src/modules/Audio/: convert_audio.py  youtube.py
src/modules/Midi/: midi_creator.py
webui/: __init__.py  __main__.py  app.py  config.py  export_skip_check.py  job_manager.py  output_bundle.py  single_instance.py  tray.py  ultrasinger_tag.py  ultrastar_plain_lyrics.py  worker.py  yarg_export.py  zip_naming.py
webui/routes/: __init__.py  api.py  lyrics_compare.py  pages.py
webui/services/: __init__.py  ai_lyrics_replace.py  cleanup.py  lyrics_remote.py  playlist.py
webui/static/: style.css
webui/templates/: about.html  ai_lyric_replace.html  base.html  downloads.html  exported_songs.html  home.html  job_detail.html  jobs.html  lyrics_compare.html  settings.html
