[build-system]
requires = ["hatchling", "setuptools", "wheel", "setuptools_scm"]
build-backend = "hatchling.build"

[project]
name = "UltraSinger"
version = "0.0.13.dev16"
description = "A tool to create UltraStar karaoke files from audio files"
requires-python = ">=3.12,<3.14"
dependencies = [
    "setuptools",
    "scipy",
    "whisperx",
    "num2words",
    "inputimeout",
    "langcodes",
    "language_data",
    "packaging",
    "librosa",
    "swift-f0",
    "pydub",
    "demucs",
    "ffmpeg-python",
    "matplotlib",
    "musicbrainzngs",
    "python-Levenshtein",
    "pretty-midi",
    "unidecode",
    "pyhyphen",
    "tqdm",
    "yt-dlp[default]",
    "deno",
    "music21",
    "dataclasses",
    "dataclasses-json",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
]

[project.optional-dependencies]
windows = []
linux = []
macos = []
webui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
]
dev = ["pytest", "isort", "black", "pylint"]

[dependency-groups]
dev = ["pytest", "isort", "black", "pylint"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
